--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bent": "^7.3.10",
     "express": "^4.17.1",
     "onoff": "^6.0.0"
   }
